Fix embed CC field on Firefox
* Fixes https://trello.com/c/5lLymp3d
* Move yammer embed overrides to separate file

--- a/app/assets/stylesheets/views/events/_show.css.scss
+++ b/app/assets/stylesheets/views/events/_show.css.scss
@@ -356,30 +356,6 @@ div.show-event {
     padding: 10px;
   }
 
-  #yammer-feed {
-    border: solid 1px #DDD;
-    @include border-radius(0 0 4px 4px);
-
-    .ymodule-attachments {
-      display: none;
-    }
-
-    .yj-ft {
-      @include border-radius(0 0 4px 4px);
-      padding: 10px 10px 0 10px;
-    }
-
-    .yj-first-message {
-      border-top: 0;
-      margin-top: 0;
-    }
-
-    .yj-last-message {
-      border-bottom: 0;
-      padding-bottom: 0;
-    }
-  }
-
   div.event-url {
     border-top: 1px solid darken($bg-color, 10%);
     padding-top: 15px;
